# pydocs

./: README.md  next-steps.md  pyproject.toml
src/pydocs/: __init__.py  cli.py  inspector.py  models.py
src/pydocs/formatters/: __init__.py  rich.py
